src/org/ieml/iemlParser.java
// $ANTLR 3.1.2 /eclipse/workspace/imelpreter/src/ieml.g 2009-03-09 21:24:20

package org.ieml;
import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class iemlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EXPRESSION", "SCRIPT", "PRINTSTAT", "XMLSTAT", "CAT0", "CAT1", "CAT2", "CAT3", "CAT4", "CAT5", "PRINT", "XML", "STAR", "PRIMITIVE", "L0LM", "LPAREN", "RPAREN", "EVENT", "L1LM", "L2LM", "L3LM", "L4LM", "L5LM", "POR", "WS"
    };
    public static final int L5LM=26;
    public static final int PRINTSTAT=6;
    public static final int CAT3=11;
    public static final int XMLSTAT=7;
    public static final int PRIMITIVE=17;
    public static final int WS=28;
    public static final int CAT4=12;
    public static final int CAT5=13;
    public static final int L4LM=25;
    public static final int CAT2=10;
    public static final int XML=15;
    public static final int L0LM=18;
    public static final int EXPRESSION=4;
    public static final int PRINT=14;
    public static final int CAT0=8;
    public static final int EOF=-1;
    public static final int POR=27;
    public static final int RPAREN=20;
    public static final int SCRIPT=5;
    public static final int CAT1=9;
    public static final int LPAREN=19;
    public static final int L2LM=23;
    public static final int L3LM=24;
    public static final int STAR=16;
    public static final int EVENT=21;
    public static final int L1LM=22;

    // delegates
    // delegators


        public iemlParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public iemlParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return iemlParser.tokenNames; }
    public String getGrammarFileName() { return "/eclipse/workspace/imelpreter/src/ieml.g"; }




    public static class script_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "script"
    // /eclipse/workspace/imelpreter/src/ieml.g:25:1: script : stat= command -> ^( SCRIPT $stat) ;
    public final iemlParser.script_return script() throws RecognitionException {
        iemlParser.script_return retval = new iemlParser.script_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        iemlParser.command_return stat = null;


        RewriteRuleSubtreeStream stream_command=new RewriteRuleSubtreeStream(adaptor,"rule command");
        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:25:8: (stat= command -> ^( SCRIPT $stat) )
            // /eclipse/workspace/imelpreter/src/ieml.g:25:10: stat= command
            {
            pushFollow(FOLLOW_command_in_script84);
            stat=command();

            state._fsp--;

            stream_command.add(stat.getTree());


            // AST REWRITE
            // elements: stat
            // token labels: 
            // rule labels: stat, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat",stat!=null?stat.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 25:23: -> ^( SCRIPT $stat)
            {
                // /eclipse/workspace/imelpreter/src/ieml.g:25:26: ^( SCRIPT $stat)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(SCRIPT, "SCRIPT"), root_1);

                adaptor.addChild(root_1, stream_stat.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "script"

    public static class command_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "command"
    // /eclipse/workspace/imelpreter/src/ieml.g:27:1: command : ( print | xml );
    public final iemlParser.command_return command() throws RecognitionException {
        iemlParser.command_return retval = new iemlParser.command_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        iemlParser.print_return print1 = null;

        iemlParser.xml_return xml2 = null;



        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:27:9: ( print | xml )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==PRINT) ) {
                alt1=1;
            }
            else if ( (LA1_0==XML) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:27:11: print
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_print_in_command101);
                    print1=print();

                    state._fsp--;

                    adaptor.addChild(root_0, print1.getTree());

                    }
                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:27:19: xml
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_xml_in_command105);
                    xml2=xml();

                    state._fsp--;

                    adaptor.addChild(root_0, xml2.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "command"

    public static class print_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "print"
    // /eclipse/workspace/imelpreter/src/ieml.g:29:1: print : PRINT ex= starexpr -> ^( PRINTSTAT $ex) ;
    public final iemlParser.print_return print() throws RecognitionException {
        iemlParser.print_return retval = new iemlParser.print_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PRINT3=null;
        iemlParser.starexpr_return ex = null;


        CommonTree PRINT3_tree=null;
        RewriteRuleTokenStream stream_PRINT=new RewriteRuleTokenStream(adaptor,"token PRINT");
        RewriteRuleSubtreeStream stream_starexpr=new RewriteRuleSubtreeStream(adaptor,"rule starexpr");
        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:29:7: ( PRINT ex= starexpr -> ^( PRINTSTAT $ex) )
            // /eclipse/workspace/imelpreter/src/ieml.g:29:9: PRINT ex= starexpr
            {
            PRINT3=(Token)match(input,PRINT,FOLLOW_PRINT_in_print113);  
            stream_PRINT.add(PRINT3);

            pushFollow(FOLLOW_starexpr_in_print117);
            ex=starexpr();

            state._fsp--;

            stream_starexpr.add(ex.getTree());


            // AST REWRITE
            // elements: ex
            // token labels: 
            // rule labels: retval, ex
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_ex=new RewriteRuleSubtreeStream(adaptor,"rule ex",ex!=null?ex.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 29:27: -> ^( PRINTSTAT $ex)
            {
                // /eclipse/workspace/imelpreter/src/ieml.g:29:30: ^( PRINTSTAT $ex)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PRINTSTAT, "PRINTSTAT"), root_1);

                adaptor.addChild(root_1, stream_ex.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "print"

    public static class xml_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xml"
    // /eclipse/workspace/imelpreter/src/ieml.g:30:1: xml : XML ex= starexpr -> ^( XMLSTAT $ex) ;
    public final iemlParser.xml_return xml() throws RecognitionException {
        iemlParser.xml_return retval = new iemlParser.xml_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token XML4=null;
        iemlParser.starexpr_return ex = null;


        CommonTree XML4_tree=null;
        RewriteRuleTokenStream stream_XML=new RewriteRuleTokenStream(adaptor,"token XML");
        RewriteRuleSubtreeStream stream_starexpr=new RewriteRuleSubtreeStream(adaptor,"rule starexpr");
        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:30:5: ( XML ex= starexpr -> ^( XMLSTAT $ex) )
            // /eclipse/workspace/imelpreter/src/ieml.g:30:7: XML ex= starexpr
            {
            XML4=(Token)match(input,XML,FOLLOW_XML_in_xml133);  
            stream_XML.add(XML4);

            pushFollow(FOLLOW_starexpr_in_xml137);
            ex=starexpr();

            state._fsp--;

            stream_starexpr.add(ex.getTree());


            // AST REWRITE
            // elements: ex
            // token labels: 
            // rule labels: retval, ex
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_ex=new RewriteRuleSubtreeStream(adaptor,"rule ex",ex!=null?ex.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 30:23: -> ^( XMLSTAT $ex)
            {
                // /eclipse/workspace/imelpreter/src/ieml.g:30:26: ^( XMLSTAT $ex)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(XMLSTAT, "XMLSTAT"), root_1);

                adaptor.addChild(root_1, stream_ex.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "xml"

    public static class starexpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "starexpr"
    // /eclipse/workspace/imelpreter/src/ieml.g:32:1: starexpr : STAR category= expr STAR STAR -> ^( EXPRESSION $category) ;
    public final iemlParser.starexpr_return starexpr() throws RecognitionException {
        iemlParser.starexpr_return retval = new iemlParser.starexpr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STAR5=null;
        Token STAR6=null;
        Token STAR7=null;
        iemlParser.expr_return category = null;


        CommonTree STAR5_tree=null;
        CommonTree STAR6_tree=null;
        CommonTree STAR7_tree=null;
        RewriteRuleTokenStream stream_STAR=new RewriteRuleTokenStream(adaptor,"token STAR");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:32:9: ( STAR category= expr STAR STAR -> ^( EXPRESSION $category) )
            // /eclipse/workspace/imelpreter/src/ieml.g:32:11: STAR category= expr STAR STAR
            {
            STAR5=(Token)match(input,STAR,FOLLOW_STAR_in_starexpr153);  
            stream_STAR.add(STAR5);

            pushFollow(FOLLOW_expr_in_starexpr157);
            category=expr();

            state._fsp--;

            stream_expr.add(category.getTree());
            STAR6=(Token)match(input,STAR,FOLLOW_STAR_in_starexpr159);  
            stream_STAR.add(STAR6);

            STAR7=(Token)match(input,STAR,FOLLOW_STAR_in_starexpr161);  
            stream_STAR.add(STAR7);



            // AST REWRITE
            // elements: category
            // token labels: 
            // rule labels: category, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_category=new RewriteRuleSubtreeStream(adaptor,"rule category",category!=null?category.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 32:40: -> ^( EXPRESSION $category)
            {
                // /eclipse/workspace/imelpreter/src/ieml.g:32:43: ^( EXPRESSION $category)
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(EXPRESSION, "EXPRESSION"), root_1);

                adaptor.addChild(root_1, stream_category.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "starexpr"

    public static class expr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // /eclipse/workspace/imelpreter/src/ieml.g:34:1: expr : ( cat0 | cat1 | cat2 | cat3 | cat4 | cat5 );
    public final iemlParser.expr_return expr() throws RecognitionException {
        iemlParser.expr_return retval = new iemlParser.expr_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        iemlParser.cat0_return cat08 = null;

        iemlParser.cat1_return cat19 = null;

        iemlParser.cat2_return cat210 = null;

        iemlParser.cat3_return cat311 = null;

        iemlParser.cat4_return cat412 = null;

        iemlParser.cat5_return cat513 = null;



        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:34:6: ( cat0 | cat1 | cat2 | cat3 | cat4 | cat5 )
            int alt2=6;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:34:8: cat0
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cat0_in_expr178);
                    cat08=cat0();

                    state._fsp--;

                    adaptor.addChild(root_0, cat08.getTree());

                    }
                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:34:15: cat1
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cat1_in_expr182);
                    cat19=cat1();

                    state._fsp--;

                    adaptor.addChild(root_0, cat19.getTree());

                    }
                    break;
                case 3 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:34:22: cat2
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cat2_in_expr186);
                    cat210=cat2();

                    state._fsp--;

                    adaptor.addChild(root_0, cat210.getTree());

                    }
                    break;
                case 4 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:34:29: cat3
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cat3_in_expr190);
                    cat311=cat3();

                    state._fsp--;

                    adaptor.addChild(root_0, cat311.getTree());

                    }
                    break;
                case 5 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:34:36: cat4
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cat4_in_expr194);
                    cat412=cat4();

                    state._fsp--;

                    adaptor.addChild(root_0, cat412.getTree());

                    }
                    break;
                case 6 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:34:43: cat5
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_cat5_in_expr198);
                    cat513=cat5();

                    state._fsp--;

                    adaptor.addChild(root_0, cat513.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class prim_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prim"
    // /eclipse/workspace/imelpreter/src/ieml.g:36:1: prim : PRIMITIVE L0LM ;
    public final iemlParser.prim_return prim() throws RecognitionException {
        iemlParser.prim_return retval = new iemlParser.prim_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token PRIMITIVE14=null;
        Token L0LM15=null;

        CommonTree PRIMITIVE14_tree=null;
        CommonTree L0LM15_tree=null;

        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:36:6: ( PRIMITIVE L0LM )
            // /eclipse/workspace/imelpreter/src/ieml.g:36:8: PRIMITIVE L0LM
            {
            root_0 = (CommonTree)adaptor.nil();

            PRIMITIVE14=(Token)match(input,PRIMITIVE,FOLLOW_PRIMITIVE_in_prim206); 
            PRIMITIVE14_tree = (CommonTree)adaptor.create(PRIMITIVE14);
            adaptor.addChild(root_0, PRIMITIVE14_tree);

            L0LM15=(Token)match(input,L0LM,FOLLOW_L0LM_in_prim208); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prim"

    public static class cat0_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "cat0"
    // /eclipse/workspace/imelpreter/src/ieml.g:37:1: cat0 : ( prim | LPAREN prim ( pop prim )* RPAREN );
    public final iemlParser.cat0_return cat0() throws RecognitionException {
        iemlParser.cat0_return retval = new iemlParser.cat0_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token LPAREN17=null;
        Token RPAREN21=null;
        iemlParser.prim_return prim16 = null;

        iemlParser.prim_return prim18 = null;

        iemlParser.pop_return pop19 = null;

        iemlParser.prim_return prim20 = null;


        CommonTree LPAREN17_tree=null;
        CommonTree RPAREN21_tree=null;

        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:37:6: ( prim | LPAREN prim ( pop prim )* RPAREN )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==PRIMITIVE) ) {
                alt4=1;
            }
            else if ( (LA4_0==LPAREN) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:37:8: prim
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_prim_in_cat0216);
                    prim16=prim();

                    state._fsp--;

                    adaptor.addChild(root_0, prim16.getTree());

                    }
                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:37:15: LPAREN prim ( pop prim )* RPAREN
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    LPAREN17=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_cat0220); 
                    LPAREN17_tree = (CommonTree)adaptor.create(LPAREN17);
                    adaptor.addChild(root_0, LPAREN17_tree);

                    pushFollow(FOLLOW_prim_in_cat0222);
                    prim18=prim();

                    state._fsp--;

                    adaptor.addChild(root_0, prim18.getTree());
                    // /eclipse/workspace/imelpreter/src/ieml.g:37:27: ( pop prim )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==POR) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /eclipse/workspace/imelpreter/src/ieml.g:37:28: pop prim
                    	    {
                    	    pushFollow(FOLLOW_pop_in_cat0225);
                    	    pop19=pop();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, pop19.getTree());
                    	    pushFollow(FOLLOW_prim_in_cat0227);
                    	    prim20=prim();

                    	    state._fsp--;

                    	    adaptor.addChild(root_0, prim20.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);

                    RPAREN21=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_cat0231); 
                    RPAREN21_tree = (CommonTree)adaptor.create(RPAREN21);
                    adaptor.addChild(root_0, RPAREN21_tree);


                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "cat0"

    public static class cat1_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "cat1"
    // /eclipse/workspace/imelpreter/src/ieml.g:38:1: cat1 : ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT ) L1LM -> ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? ) ;
    public final iemlParser.cat1_return cat1() throws RecognitionException {
        iemlParser.cat1_return retval = new iemlParser.cat1_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EVENT22=null;
        Token L1LM23=null;
        iemlParser.cat0_return first = null;

        iemlParser.cat0_return second = null;

        iemlParser.cat0_return third = null;


        CommonTree EVENT22_tree=null;
        CommonTree L1LM23_tree=null;
        RewriteRuleTokenStream stream_EVENT=new RewriteRuleTokenStream(adaptor,"token EVENT");
        RewriteRuleTokenStream stream_L1LM=new RewriteRuleTokenStream(adaptor,"token L1LM");
        RewriteRuleSubtreeStream stream_cat0=new RewriteRuleSubtreeStream(adaptor,"rule cat0");
        try {
            // /eclipse/workspace/imelpreter/src/ieml.g:38:6: ( ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT ) L1LM -> ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? ) )
            // /eclipse/workspace/imelpreter/src/ieml.g:38:8: ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT ) L1LM
            {
            // /eclipse/workspace/imelpreter/src/ieml.g:38:8: ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==PRIMITIVE||LA7_0==LPAREN) ) {
                alt7=1;
            }
            else if ( (LA7_0==EVENT) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:38:9: (first= cat0 (second= cat0 (third= cat0 )? )? )
                    {
                    // /eclipse/workspace/imelpreter/src/ieml.g:38:9: (first= cat0 (second= cat0 (third= cat0 )? )? )
                    // /eclipse/workspace/imelpreter/src/ieml.g:38:10: first= cat0 (second= cat0 (third= cat0 )? )?
                    {
                    pushFollow(FOLLOW_cat0_in_cat1242);
                    first=cat0();

                    state._fsp--;

                    stream_cat0.add(first.getTree());
                    // /eclipse/workspace/imelpreter/src/ieml.g:38:21: (second= cat0 (third= cat0 )? )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==PRIMITIVE||LA6_0==LPAREN) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // /eclipse/workspace/imelpreter/src/ieml.g:38:22: second= cat0 (third= cat0 )?
                            {
                            pushFollow(FOLLOW_cat0_in_cat1247);
                            second=cat0();

                            state._fsp--;

                            stream_cat0.add(second.getTree());
                            // /eclipse/workspace/imelpreter/src/ieml.g:38:39: (third= cat0 )?
                            int alt5=2;
                            int LA5_0 = input.LA(1);

                            if ( (LA5_0==PRIMITIVE||LA5_0==LPAREN) ) {
                                alt5=1;
                            }
                            switch (alt5) {
                                case 1 :
                                    // /eclipse/workspace/imelpreter/src/ieml.g:38:39: third= cat0
                                    {
                                    pushFollow(FOLLOW_cat0_in_cat1251);
                                    third=cat0();

                                    state._fsp--;

                                    stream_cat0.add(third.getTree());

                                    }
                                    break;

                            }


                            }
                            break;

                    }


                    }


                    }
                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/src/ieml.g:38:51: EVENT
                    {
                    EVENT22=(Token)match(input,EVENT,FOLLOW_EVENT_in_cat1259);  
                    stream_EVENT.add(EVENT22);


                    }
                    break;

            }

            L1LM23=(Token)match(input,L1LM,FOLLOW_L1LM_in_cat1262);  
            stream_L1LM.add(L1LM23);



            // AST REWRITE
            // elements: second, EVENT, third, first
            // token labels: 
            // rule labels: first, retval, third, second
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_first=new RewriteRuleSubtreeStream(adaptor,"rule first",first!=null?first.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_third=new RewriteRuleSubtreeStream(adaptor,"rule third",third!=null?third.tree:null);
            RewriteRuleSubtreeStream stream_second=new RewriteRuleSubtreeStream(adaptor,"rule second",second!=null?second.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 38:63: -> ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? )
            {
                // /eclipse/workspace/imelpreter/src/ieml.g:38:66: ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CAT1, "CAT1"), root_1);

                // /eclipse/workspace/imelpreter/src/ieml.g:38:73: ( $first)?
                if ( stream_first.hasNext() ) {
                    adaptor.addChild(root_1, stream_first.nextTree());

                }
                stream_first.reset();
                // /eclipse/workspace/imelpreter/src/ieml.g:38:81: ( $second)?
                if ( stream_second.hasNext() ) {
                    adaptor.addChild(root_1, stream_second.nextTree());

                }
                stream_second.reset();
                // /eclipse/workspace/imelpreter/src/ieml.g:38:90: ( $third)?
                if ( stream_third.hasNext() ) {
                    adaptor.addChild(root_1, stream_third.nextTree());

                }
                stream_third.reset();
                // /eclipse/workspace/imelpreter/src/ieml.g:38:98: ( EVENT )?
                if ( stream_EVENT.hasNext() ) {
                    adaptor.addChild(root_1, stream_EVENT.nextNode());

                }
                stream_EVENT.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }
